# wasm_web

./: .gitignore  Makefile  README.md
lib_wasm/: Cargo.toml
lib_wasm/src/: lib.rs
web/: package-lock.json  package.json
web/src/: index.js  index.pug
