[package]
name = "lib_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
